# vsxdt

./: .gitignore  .vscodeignore  LICENSE  Makefile  README-zh.md  README.md  changelog.md  esbuild.js  language-configuration.json  meson.build  package.json  tsconfig.json
debian/: changelog  control  copyright  rules
screens/: screendemo.webm
scripts/: log2md
src/: cdp.ts  chrome-remote-interface.d.ts  codejs-api.d.ts  evalSelection.ts  extension.ts  inputInject.ts  panel.ts  toggleProxies.ts
